# aiprint

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
notebooks/: demo_colored_print.ipynb
src/aiprint/: core.py  helper.py
tests/: test_main.py
tests/integration/: test_integration.py
tests/unittest/: test_core.py  test_helper.py
